--- a/app/views/reservations/edit_timeselect.html.erb
+++ b/app/views/reservations/edit_timeselect.html.erb
@@ -1,16 +1,20 @@
 <div class="guests-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 guests-new-container">
+      <div class="col-md-offset-1 col-md-10 guests-new-container">
         <h1 class="text-center text-gray title">予約変更<h1>
           <h2 class="text-center text-gray subtitle"><%= @customer.name_kana %>様</h2>
-
-          <h3 class="text-center text-gray"><%= @reservation.reservation_date %>→<%= @reservation_date %></h3>
+          <h3 class="text-center text-gray"><%= @reservation_date %></h3>
 
           <%= form_for @reservation do |f| %>
            <div class="form-group">
              <%= f.label :reservation_time, "予約時間", class: 'text-gray' %>
              <%= f.time_field :reservation_time, class: 'form-control' %>
+             <% if @reservation.errors.full_messages.present? %>
+              <% @reservation.errors.full_messages.each do |full_message| %>
+               <p class="text-red"><%= full_message %></p>
+              <% end %>
+             <% end %>
            </div>
            <div>
              <%= f.label :note, "メモ", class: 'text-gray' %>
