--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,22 +3,52 @@
     <div class="row">
       <div class="col-md-offset-4 col-md-4 users-new-container">
         <h1 class="text-center text-gray title">新規ユーザー登録</h1>
+
+        <%= form_with(model: @user, local: true) do |form| %>
+          <% if @user.errors.any? %>
+            <div class="text-red">
+              <h2>記入内容に<%= @user.errors.count %>件の誤りがあります</h2>
+            </div>
+          <% end %>
+        <% end %>
+
         <%= form_for @user do |f| %>
           <div class="form-group">
             <%= f.label :name, class: 'text-gray' %>
             <%= f.text_field :name, class: 'form-control' %>
+            <% if @user.errors.include?(:name) %>
+              <% @user.errors.full_messages_for(:name).each do |full_message| %>
+              <p class="text-red"><%= full_message %></p>
+              <% end %>
+            <% end %>
           </div>
           <div class="form-group">
             <%= f.label :email, class: 'text-gray' %>
             <%= f.text_field :email, class: 'form-control' %>
+            <% if @user.errors.include?(:email) %>
+              <% @user.errors.full_messages_for(:email).each do |full_message| %>
+              <p class="text-red"><%= full_message %></p>
+              <% end %>
+            <% end %>
           </div>
           <div class="form-group">
             <%= f.label :password, class: 'text-gray' %><label class= "explanation">※半角英数字の組み合わせで8文字以上</label>
             <%= f.password_field :password, class: 'form-control' %>
+
+            <% if @user.errors.include?(:password) %>
+              <% @user.errors.full_messages_for(:password).each do |full_message| %>
+              <p class="text-red"><%= full_message %></p>
+              <% end %>
+            <% end %>
           </div>
           <div class="form-group">
             <%= f.label :password_confirmation, class: 'text-gray' %>
             <%= f.password_field :password_confirmation, class: 'form-control' %>
+            <% if @user.errors.include?(:password_confirmation) %>
+              <% @user.errors.full_messages_for(:password_confirmation).each do |full_message| %>
+              <p class="text-red"><%= full_message %></p>
+              <% end %>
+            <% end %>
           </div>
           <div class="form-group">
             <%= f.check_box :admin , {} %>
