新規ユーザー作成画面の注釈追加とformのサイズ変更

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,9 @@
 <div class="users-new-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 users-new-container">
+      <div class="col-md-offset-2 col-md-8 users-new-container">
         <h1 class="text-center text-gray title">新規ユーザー登録</h1>
+        <label class= "explanation">※漢字・ひらがな・カタカナは全角、記号・英数字は半角入力</label>
 
         <%= form_with(model: @user, local: true) do |form| %>
           <% if @user.errors.any? %>
