予約確認ページのカルテ作成リンクをカルテ一覧リンクに変更

--- a/app/views/treatment_records/new.html.erb
+++ b/app/views/treatment_records/new.html.erb
@@ -1,8 +1,8 @@
 <div class="treatment_record-wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-4 col-md-4 treatment_record-container">
-        <h1 class="text-gray text-center title">カルテ</h1>
+      <div class="col-md-offset-1 col-md-10 treatment_record-container">
+        <h1 class="text-gray text-center title">カルテ登録</h1>
         <h2 class="text-gray text-center subtitle"><%= @customer.name_kana %>様</h2>
         <h3 class="text-gray text-center"><%= @reservation.reservation_date %></h3>
         <%= form_for @treatment_record do |f| %>
